[package]
name = "last-home-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"]}
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
confy = "0.6.0"
jsonwebtoken = "9.2.0"
chrono = "0.4.34"
clap ={ version = "4.5.0", features = ["derive", "env"]}
